made the cover clickable, small fix on mobile version

--- a/dna-seq_stories/css/styles.css
+++ b/dna-seq_stories/css/styles.css
@@ -8,9 +8,8 @@ body{
     background: #4DA0B0;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to top, #D39D38, #4DA0B0);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to top, #D39D38, #4DA0B0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-repeat: no-repeat;
-    background-size: cover;
     font-family: 'Roboto', sans-serif;
+    width: 100%;
 
 }
 h1{
@@ -87,18 +86,18 @@ img.cover{
     border-radius: 15px;
     color:#641b1b;
     width: 20vw;
-    margin-left: 2vw;
+    margin-left: 3vw;
 }
 .uk-button.uk-button-default:hover{
     border: rgb(255, 180, 42) solid 7px;
     color:#965555;
 }
-.uk-lightbox-items{
-    height: 100vh !important;
-}
 
 @media only screen and (max-width: 1800px) and (min-width: 1001px){
-
+    .container{
+        flex-wrap: nowrap;
+        align-content: space-between;
+    }
 .icon{
     width: 12vw;
 }
@@ -109,7 +108,8 @@ img.cover{
     font-size: 1.3vw;
 }
     img.cover{
-        height: 47vw;
+        height: 47vw !important;
+        width: 30vw !important;
     }
     h1{
         font-size: 3.5vw !important;
@@ -123,7 +123,7 @@ img.cover{
 
 @media only screen and (max-width: 1100px) and (min-width: 850px){
     .container{
-        width: 95vw;
+        width: 95%;
         flex-direction: column !important;
     }
     .left-column{
@@ -134,6 +134,9 @@ img.cover{
 
     }
     img.cover{
+        height: 60vw;
+    }
+    .inner{
         height: 60vw;
     }
     .left-column p{
@@ -160,7 +163,7 @@ img.cover{
         flex-direction: column !important;
         width: 100%;
         flex-flow: column wrap !important; 
-        height: 180vh;
+        height: 150vh;
     }
     .icon{
         margin: 0;
@@ -201,7 +204,7 @@ img.cover{
     }
     img.cover{
         height: 110vw;
-        margin-left: 14vw;
+        margin-left: 6vw;
     }
     .uk-button.uk-button-default:hover{
         border: rgb(255, 180, 42) solid 6px;
